# qr-comp

./: .gitignore  AGENTS.md  B200.md  EXPERIMENTS.md  PROFILE.md  README.md  REMOTE_RUNBOOK.md  SUBMIT.md  SWARM.md  design.md  inputs.md  kernel_development_loop.md  learn_householder_qr.ipynb  local_benchmark.py  local_eval.py  pyproject.toml  submission.py  task.py
autotune/: __init__.py  hardware.py  sweep.py
baselines/: __init__.py  geqrf_baseline.py
dashboard/: README.md  package.json  seed_demo.py  server.py  tsconfig.json
dashboard/src/: app.ts  types.ts
dashboard/static/: app.js  app.js.map  index.html  styles.css  types.js  types.js.map
kernels/: __init__.py
kernels/cuda/: README.md  compact_householder.cu
kernels/python/: __init__.py  baseline.py  householder.py  triangular.py
kernels/triton/: README.md  small_n.py
qr_practice/: __init__.py  householder.py
scripts/: ncu_qr.sh  profile_geqrf_baseline.sh
tests/: test_baselines.py  test_hardware.py  test_householder.py  test_kernels.py  test_local_eval.py
